docs: Add Utilities documentation
Added information on running backup / restore utilities. Additionally
some api documentation was updated.

--- a/docs-k8s/templates/tests/test-connection.yaml
+++ b/docs-k8s/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "docs-k8s.fullname" . }}:{{ .Values.service.port }}']
+      args: ['https://workspace-login.riesenlabs.com/docs/index.html']
   restartPolicy: Never
